--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="大作业.css">
+    <link rel="stylesheet" href="https://diaw-chen.github.io/xingciyuan.github.io/大作业.css">
 </head>
 
 <body>
