--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <span></span>
         <span></span>
     </div>
-    <img src="科技边框.png" alt="" class="scib">
-    <img src="左源.png" alt="" class="leftt">
-    <img src="右源头.png" alt="" class="rightt">
-    <img src="科技边框2.png" alt="" id="scib2">
+    <img src="https://diaw-chen.github.io/xingciyuan.github.io/科技边框.png" alt="" class="scib">
+    <img src="https://diaw-chen.github.io/xingciyuan.github.io/左源.png" alt="" class="leftt">
+    <img src="https://diaw-chen.github.io/xingciyuan.github.io/右源头.png" alt="" class="rightt">
+    <img src="https://diaw-chen.github.io/xingciyuan.github.io/科技边框2.png" alt="" id="scib2">
     <div class="box1"><a href="#">神秘空间1</a></div>
     <div class="box2"><a href="#">神秘空间2</a></div>
     <div class="box3"><a href="#">神秘空间3</a></div>
@@ -81,9 +81,9 @@
         }
 
         // 调用函数处理三个图片，分别指定不同的碎片分裂数
-        createFragmentAnimation("左人物.png", "image-container1", 35, 35);
-        createFragmentAnimation("中人物.png", "image-container2", 35, 35);
-        createFragmentAnimation("右人物.png", "image-container3", 34, 34);
+        createFragmentAnimation("https://diaw-chen.github.io/xingciyuan.github.io/左人物.png", "image-container1", 35, 35);
+        createFragmentAnimation("https://diaw-chen.github.io/xingciyuan.github.io/中人物.png", "image-container2", 35, 35);
+        createFragmentAnimation("https://diaw-chen.github.io/xingciyuan.github.io/右人物.png", "image-container3", 34, 34);
 
 
         const buttons = [
