--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="box1"><a href="#">神秘空间1</a></div>
     <div class="box2"><a href="#">神秘空间2</a></div>
     <div class="box3"><a href="#">神秘空间3</a></div>
-    <div class="box4"><a href="../练习代码/神秘小挂件.html">神秘小挂件</a></div>
+    <div class="box4"><a href="https://diaw-chen.github.io/xingciyuan.github.io/神秘小挂件.html">神秘小挂件</a></div>
     <div id="image-container1"></div>
     <div id="image-container2"></div>
     <div id="image-container3"></div>
