--- a/克拉拉.html
+++ b/克拉拉.html
@@ -222,7 +222,7 @@
         <div class="flex flex-col gap-6">
             <div class="flex flex-col items-center">
                 <p class="text-white">AI重绘</p>
-                <a href="ai绘画/克拉拉背z.png" download>
+                <a href="ai绘画/克拉拉背z.png" >
                     <img src="ai绘画/克拉拉背z.png" alt="Image 4">
                 </a>
             </div>
