--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         const textDisplay = document.getElementById('textDisplay');
         const textsToDisplay = [
             '欢迎探索Plastiny大人创造的星次元\n为庆祝星穹铁道两周年\nPlastiny大人制作了周边惊喜\n藏匿于三大神秘空间中',
-            '神秘空间1有着趣味翻牌游戏\n神秘空间2可观赏蝶萤五子棋对弈\n神秘空间3可欣赏全新AI艺术',
+            '神秘空间1有着趣味翻牌游戏\n神秘空间2可观赏蝶萤五子棋对弈\n神秘空间3可欣赏全新AI艺术\n点击图片即可下载'，
             '神秘小惊喜由您亲自探索\n更多内容敬请期待'
         ];
 
